--- a/app/assets/javascripts/Templates/myModalRegistration.html
+++ b/app/assets/javascripts/Templates/myModalRegistration.html
@@ -57,13 +57,13 @@
                   <div class="form-group">
                       <label>Name</label>
                       <input type="text" name="name" placeholder="Full name" class="form-control" ng-model="data.name" required>
-                      <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">Your name is required.</p>
+                      <p ng-show="outerForm.name.$invalid && !outerForm.name.$pristine" class="help-block">Your name is required.</p>
                   </div>
                   <!-- EMAIL -->
                   <div class="form-group">
                       <label>Email</label>
                       <input type="email" name="email" placeholder="Email address" class="form-control" ng-model="data.email" required>
-                      <p ng-show="form.userForm.email.$invalid && !form.userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+                      <p ng-show="outerForm.email.$invalid && !outerForm.email.$pristine" class="help-block">Enter a valid email.</p>
                   </div>
                   <div class="form-group" ng-switch-when="sedentary">
                     <div class="alert alert-info" role="alert">
@@ -84,21 +84,21 @@
                 <div class="form-group">
                     <label>Name</label>
                     <input type="text" name="name" placeholder="Full name" class="form-control" ng-model="data.name" required>
-                    <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">Your name is required.</p>
+                    <p ng-show="outerForm.name.$invalid && !outerForm.name.$pristine" class="help-block">Your name is required.</p>
                 </div>
                 <!-- USERNAME 
                 <div class="form-group">
                     <label>Username</label>
                     <input type="text" name="username" class="form-control" ng-model="credentials.username" ng-minlength="3" ng-maxlength="8" required>
-                    <p ng-show="form.userForm.username.$error.minlength" class="help-block">Username is too short.</p>
-                    <p ng-show="form.userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+                    <p ng-show="outerForm.username.$error.minlength" class="help-block">Username is too short.</p>
+                    <p ng-show="outerForm.username.$error.maxlength" class="help-block">Username is too long.</p>
                 </div> 
                 -->
                 <!-- EMAIL -->
                 <div class="form-group">
                     <label>Email</label>
                     <input type="email" name="email" placeholder="Email address" class="form-control" ng-model="data.email" required>
-                    <p ng-show="form.userForm.email.$invalid && !form.userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+                    <p ng-show="outerForm.email.$invalid && !outerForm.email.$pristine" class="help-block">Enter a valid email.</p>
                 </div>
               </div>
             </div>
