--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -178,27 +178,28 @@
           <!--/Map open (for adaptive)-->
 
         <!--Commerce info-->
-        <div class="row" ng-hide = "IsVisible">
-            <div class="col-md-12">
+        <div class="container-fluid" ng-hide = "IsVisible">
+            <div class="row">
                 <h5 class="cat">Commerce List</h5>
                 <div ng-repeat="commerce in commerces">
-                    <div class="card" style="width: 18rem;">
-                        <%= image_tag "ava1.png", class:"card-img-top" %>
-                        <div class="card-body">
-                            <h5 class="card-title">{{commerce.name}}</h5>
-                            <p class="card-text">Commerce localisé à l'adresse {{commerce.adress1}} dans la ville de {{commerce.city}}</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Siren : 999 999 999 99999</li>
-                            <li class="list-group-item">Etat : Actif depuis le 20/09/2017</li>
-                            <li class="list-group-item">Catégorie d'établissement : Siège et établissement principal</li>
-                        </ul>
-                        <div class="card-body">
-                            <button type="button" class="btn btn-sm btn-primary" ng-click="ShowHide()">Show product</button>
-                            <button type="button" ng-click="delCommerce(commerce)" class="btn btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Delete</button>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <%= image_tag "ava1.png", class:"card-img-top" %>
+                            <div class="card-body">
+                                <h5 class="card-title">{{commerce.name}}</h5>
+                                <p class="card-text">Commerce localisé à l'adresse {{commerce.adress1}} dans la ville de {{commerce.city}}</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Siren : 999 999 999 99999</li>
+                                <li class="list-group-item">Etat : Actif depuis le 20/09/2017</li>
+                                <li class="list-group-item">Catégorie d'établissement : Siège et établissement principal</li>
+                            </ul>
+                            <div class="card-body">
+                                <button type="button" class="btn btn-sm btn-primary" ng-click="ShowHide()">Show product</button>
+                                <button type="button" ng-click="delCommerce(commerce)" class="btn btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Delete</button>
+                            </div>
                         </div>
                     </div>
-                    <br><br>
                 </div>
             </div>
         </div>
