--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -13,7 +13,8 @@
 		'angularMoment',
 		'ngCart',
 		'angularTrix',
-		'ngGeolocation'
+		'ngGeolocation',
+		'angular.filter'
 	];
 	var marketApp = angular.module('marketApp', modules);
 
