Newsletter front office

--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -134,7 +134,7 @@
                     <div class="search">
                         <input type="email" class="form-control  input-sm" id="exampleInputEmail2" placeholder="Enter email" ng-model="credentials.email"/>
                     </div>
-                    <a ng-click="" class="btn btn-warning col-md-2 btn-sm">Sign Up</a>
+                    <a ng-click="newsletter()" class="btn btn-warning col-md-2 btn-sm">Click Here</a>
                 </div>
             </div>
         </div>
